Fixed text align

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -89,6 +89,7 @@
 @media (min-width: 768px) {
     p {
         font-size: 2.3em;
+        text-align: justify;
     }
 
     h3 {
